--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ This vignette provides an overview of the package’s key functionalities and de
 - Load and preprocess hydrometric data: The package supports various data formats and includes functions for cleaning, filtering, and formatting time series data.
 - Compute historical statistics: It can calculate long-term percentiles, mean values, and other statistical summaries to establish a historical baseline for comparison.
 - Generate hydrographs: Users can create clear and customizable plots that overlay the current year’s hydrometric data on historical trends, making it easy to identify deviations or anomalies.
-- Customize visualization settings: The package allows for fine-tuned control over axis scaling, line styles, colors, and annotations, ensuring clarity and effectiveness in communication.
+- Customize scales: The package provides fine-tuned control over axis scaling and time period selection, allowing users to adjust date ranges and data visualization as needed.
 
 By automating many of the repetitive tasks involved in hydrograph creation, hydroGraphR enhances efficiency and consistency in hydrological data analysis. The following sections will guide you through its core functionality with step-by-step examples.
 
@@ -88,7 +88,7 @@ Once the hydrometric data is downloaded, you can calculate statistics for:
 
 Statistics calculated are listed in more detail in Step 3. 
 
-WY is a logical value indicating whether to present hydrograph by water year (Nov-Oct) (TRUE) or calendar year (Jan-Dec) (FALSE).
+WY is a logical value indicating whether to present hydrograph by water year (Nov-Oct) (TRUE) or calendar year (Jan-Dec) (FALSE). For more information on water years, see [here](https://www.ausableriver.org/blog/what-water-year#:~:text=Hydrologists%20measure%20time%20differently%20than,known%20as%20a%20water%20year.).
 
 Max/min dates can also be selected for historical dates if focus is on a specific period. For example, you could enter date_minimum =  "2010-01-01",  date_maximum - "2019-12-31" and YOI = 2020 if you wanted to compare 2020 with the 2010's. 
 
@@ -121,16 +121,19 @@ Variables shown on hydrograph legends are described here:
 
 definitions <- data.frame(
   Term = c("Mean",  "Mean ", 
-            "Q25 (Today)", "Q75 (Today)", "MAD",
+            "q25-q75", "q5-q95", "MAD",
            "Date Ranges"),
   
-  Definition = c("The average value of the measurements over the YOI period.", 
-                 "The average value of the measurements over the historical period.",
-    "The 25th percentile of today's data distribution, indicating that 25% of the data points are below this value.",
-    "The 75th percentile of today's data distribution, indicating that 75% of the data points are below this value.",
-    "Mean Annual Discharge, a measure of the average amount of discharge through a river or stream over the course of a year.",
-    "The years during which the data was collected and included in analysis."
-  )
+  
+Definition = c(
+  "The recorded mean discharge or water level for each day.", 
+  "The long-term mean discharge or water level for each day, based on historical data.",
+  "The interquartile range (q25–q75) of the data distribution, representing the middle 50% of values, where q25 is the 25th percentile and q75 is the 75th percentile.",
+  "The 5th–95th percentile range (q5–q95) of the data distribution, capturing 90% of observed values, where q5 is the 5th percentile and q95 is the 95th percentile.",
+  "Mean Annual Discharge, a measure of the average amount of discharge through a river or stream over the course of a year.",
+  "The years during which the data was collected and included in analysis."
+)
+
 )
 
 knitr::kable(definitions, "html", escape = FALSE, col.names = c("Term", "Definition")) %>%
@@ -144,16 +147,18 @@ knitr::kable(definitions, "html", escape = FALSE, col.names = c("Term", "Definit
 
 ```
 
-#### Variables
+#### Parameters 
 
-- **Parameter**: Options are `"flow"` for a discharge hydrograph, and `"level"` for a water level hydrograph. 
+Below is a list of the input parameters for the functions, along with their expected values: 
 
-- **WY**: Logical value indicating whether to present hydrograph by water year (Nov-Oct)(`TRUE`) or calendar year (Jan-Dec)(`FALSE`).
-    - No matter the output selection ensure that the water year (WY) choice matches the selection made in Step 2. For example, if "calendar year" was chosen for statistics in Step 2, it must also be selected for the hydrograph presentation. Selecting a different year type will result in missing data on the hydrograph and trigger a warning.
+- **parameter**: Options are `"flow"` for a discharge hydrograph, and `"level"` for a water level hydrograph. 
+
+- **WY**: Logical value indicating whether to present hydrograph by water year (Nov-Oct)(`TRUE`) or calendar year (Jan-Dec)(`FALSE`). For more information on hydrologic water years see [here](https://www.ausableriver.org/blog/what-water-year#:~:text=Hydrologists%20measure%20time%20differently%20than,known%20as%20a%20water%20year.).
+    - Note:**Ensure that the water year (WY) choice matches the selection made in Step 2.** For example, if "calendar year" was chosen for statistics in Step 2, it must also be selected for the hydrograph presentation. Selecting a different year type will result in missing data on the hydrograph and trigger a warning.
 
 - **output_type**: 
     - `"print"` will print your image in R, useful for embedding in rmarkdown or shiny type outputs. 
-    - `"jpeg"` will produce a jpeg image and save it to the "figures/" folder of this project. 
+    - `"jpeg"` will produce a jpeg image and save it to the "figures/" folder of your project. 
 
 <br>
 
@@ -209,4 +214,4 @@ You can combine these tools with other R packages to create streamlined workflow
 
 `hydroGraphR` simplifies hydrometric data analysis and visualization with functions for downloading data, generating statistics, and creating hydrographs. Whether working with individual rivers or a larger dataset, the package offers flexibility for both exploratory and presentation-ready outputs.
 
-For further details, consult the package documentation
+For more information, please email Paula.Soto@dfo-mpo.gc.ca
